--- a/package.json
+++ b/package.json
@@ -7,15 +7,25 @@
     "food-effect": "./build/index.js"
   },
   "scripts": {
-    "build": "tsc && chmod 755 build/index.js"
+    "build": "tsc && chmod 755 build/index.js",
+    "start": "node build/index.js",
+    "dev": "npm run build && npm run start",
+    "test": "node test-client.js"
   },
   "files": [
     "build"
   ],
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "keywords": [
+    "mcp",
+    "nutrition",
+    "mood",
+    "food",
+    "health",
+    "usda"
+  ],
+  "author": "Your Name",
+  "license": "MIT",
+  "description": "MCP server for analyzing food mood effects based on nutritional content and neurotransmitter impact",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.20.1",
     "zod": "^3.25.76"
